--- a/.github/workflows/update-proxies.yml
+++ b/.github/workflows/update-proxies.yml
@@ -54,7 +54,7 @@ jobs:
           });
           
           console.log('Waiting 12 seconds for redirect...');
-          await page.waitForTimeout(12000);
+          await new Promise(resolve => setTimeout(resolve, 12000));
           
           const finalUrl = page.url();
           console.log('Final URL after wait:', finalUrl);
