--- a/.github/workflows/update-proxies.yml
+++ b/.github/workflows/update-proxies.yml
@@ -28,24 +28,30 @@ jobs:
     - name: Fetch subscription links
       id: fetch
       run: |
-        # 安装 Node.js（Actions Ubuntu 支持）
+        # 安装 Node.js
         curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
         sudo apt-get install -y nodejs
         
-        # 安装 Puppeteer
-        npm install puppeteer
+        # 安装 Puppeteer + 反检测插件
+        npm install puppeteer puppeteer-extra puppeteer-extra-plugin-stealth
         
-        # Puppeteer 脚本：全自动等待 + 提取
+        # Puppeteer 脚本：全自动等待 + 反 Cloudflare
         node -e "
-        const puppeteer = require('puppeteer');
+        const puppeteer = require('puppeteer-extra');
+        const StealthPlugin = require('puppeteer-extra-plugin-stealth');
+        puppeteer.use(StealthPlugin());
         const fs = require('fs');
         (async () => {
           const browser = await puppeteer.launch({ 
             headless: true, 
-            args: ['--no-sandbox', '--disable-setuid-sandbox', '--disable-dev-shm-usage']
+            args: ['--no-sandbox', '--disable-setuid-sandbox', '--disable-dev-shm-usage', '--disable-blink-features=AutomationControlled']
           });
           const page = await browser.newPage();
           await page.setUserAgent('Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36');
+          await page.evaluateOnNewDocument(() => {
+            Object.defineProperty(navigator, 'webdriver', { get: () => undefined });
+            window.chrome = { runtime: {} };
+          });
           
           console.log('Accessing initial page...');
           await page.goto('https://www.bsbb.cc/sub/index.php', { 
@@ -55,6 +61,9 @@ jobs:
           
           console.log('Waiting 12 seconds for redirect...');
           await new Promise(resolve => setTimeout(resolve, 12000));
+          
+          // 模拟滚动防检测
+          await page.evaluate(() => window.scrollTo(0, 100));
           
           const finalUrl = page.url();
           console.log('Final URL after wait:', finalUrl);
@@ -71,14 +80,17 @@ jobs:
             timeout: 30000 
           });
           
+          // 等待 Cloudflare 挑战解决（如果有）
+          await new Promise(resolve => setTimeout(resolve, 5000));
+          
           // 获取纯文本内容（base64 订阅）
           const subContent = await page.evaluate(() => document.body.textContent.trim());
           
           fs.writeFileSync('raw-sub.txt', subContent);
           
           const length = subContent.length;
-          if (length < 1000) {
-            console.log('Failed: Content too short. Preview:', subContent.substring(0, 200));
+          if (length < 1000 || subContent.includes('Verify you are human')) {
+            console.log('Failed: Cloudflare detected or short content. Preview:', subContent.substring(0, 200));
             await browser.close();
             process.exit(1);
           }
