--- a/.github/workflows/update-nodes.yml
+++ b/.github/workflows/update-nodes.yml
@@ -19,10 +19,62 @@ jobs:
       - name: Install dependencies
         run: |
           pip install pyyaml
+
+      - name: Install Node.js and Puppeteer
+        run: |
+          curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+          sudo apt-get install -y nodejs
           npm install puppeteer puppeteer-extra puppeteer-extra-plugin-stealth
 
       - name: Fetch latest subscription
         run: node fetch_sub.js
+
+      - name: Decode base64 and generate URIs
+        run: |
+          python -c "
+          import base64
+          import yaml
+          from urllib.parse import quote
+          
+          with open('raw-sub.txt', 'r') as f:
+              content = f.read().strip()
+          
+          # Decode base64 to YAML
+          try:
+              decoded = base64.b64decode(content).decode('utf-8')
+              data = yaml.safe_load(decoded)
+              proxies = data.get('proxies', [])
+              print(f'Decoded {len(proxies)} proxies from YAML.')
+          except Exception as e:
+              print(f'Decode failed: {e}')
+              proxies = []
+          
+          # Filter vless/trojan, generate URIs
+          with open('input_nodes.txt', 'w', encoding='utf-8') as f:
+              for p in proxies:
+                  if p.get('type') in ['vless', 'trojan']:
+                      name = p.get('name', f'{p[\"type\"]} Unnamed')
+                      if p['type'] == 'vless':
+                          query = '&'.join([
+                              f'type={p.get(\"network\", \"tcp\")}',
+                              'security=tls' if p.get('tls') else '',
+                              f'flow={p.get(\"flow\", \"\")}' if p.get('flow') else '',
+                              f'sni={p.get(\"sni\", \"\")}' if p.get('sni') else '',
+                              f'path={quote(p.get(\"path\", \"\"))}' if p.get('path') else ''
+                          ]).rstrip('&')
+                          uri = f'vless://{quote(p[\"uuid\"])}@{p[\"server\"]}:{p[\"port\"]}?{query}#{name}' if query else f'vless://{quote(p[\"uuid\"])}@{p[\"server\"]}:{p[\"port\"]}#{name}'
+                      else:  # trojan
+                          query = '&'.join([
+                              f'sni={p.get(\"sni\", \"\")}' if p.get('sni') else '',
+                              f'type={p.get(\"network\", \"tcp\")}' if p.get('network') else '',
+                              f'path={quote(p.get(\"path\", \"\"))}' if p.get('path') else ''
+                          ]).rstrip('&')
+                          uri = f'trojan://{quote(p[\"password\"])}@{p[\"server\"]}:{p[\"port\"]}?{query}#{name}' if query else f'trojan://{quote(p[\"password\"])}@{p[\"server\"]}:{p[\"port\"]}#{name}'
+                      f.write(uri + '\n')
+          
+          num = sum(1 for line in open('input_nodes.txt') if line.strip())
+          print(f'Generated {num} vless/Trojan URIs.')
+          "
 
       - name: Convert to YAML
         run: python node_converter.py
@@ -31,6 +83,10 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "actions@github.com"
-          git add input_nodes.txt nodes.yaml || true
-          git commit -m "Auto update nodes $(date -u +'%Y-%m-%d')" || echo "no changes"
-          git push || echo "push failed"
+          git add raw-sub.txt input_nodes.txt nodes.yaml || true
+          if git diff --staged --quiet; then
+            echo "No changes"
+          else
+            git commit -m "Auto update nodes $(date -u +'%Y-%m-%d')"
+            git push
+          fi
