--- a/.github/workflows/update-nodes.yml
+++ b/.github/workflows/update-nodes.yml
@@ -19,9 +19,6 @@ jobs:
       - name: Install dependencies
         run: |
           pip install pyyaml
-
-      - name: Install Node.js and Puppeteer
-        run: |
           curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
           sudo apt-get install -y nodejs
           npm install puppeteer puppeteer-extra puppeteer-extra-plugin-stealth
@@ -39,54 +36,48 @@ jobs:
           with open('raw-sub.txt', 'r') as f:
               content = f.read().strip()
           
-          # Decode base64 to YAML
           try:
               decoded = base64.b64decode(content).decode('utf-8')
               data = yaml.safe_load(decoded)
               proxies = data.get('proxies', [])
-              print(f'Decoded {len(proxies)} proxies from YAML.')
+              print(f'Parsed {len(proxies)} proxies.')
           except Exception as e:
-              print(f'Decode failed: {e}')
+              print(f'Decode error: {e}')
               proxies = []
           
-          # Filter vless/trojan, generate URIs
           with open('input_nodes.txt', 'w', encoding='utf-8') as f:
               for p in proxies:
                   if p.get('type') in ['vless', 'trojan']:
                       name = p.get('name', f'{p[\"type\"]} Unnamed')
                       if p['type'] == 'vless':
-                          query = '&'.join([
-                              f'type={p.get(\"network\", \"tcp\")}',
-                              'security=tls' if p.get('tls') else '',
-                              f'flow={p.get(\"flow\", \"\")}' if p.get('flow') else '',
-                              f'sni={p.get(\"sni\", \"\")}' if p.get('sni') else '',
-                              f'path={quote(p.get(\"path\", \"\"))}' if p.get('path') else ''
-                          ]).rstrip('&')
+                          query_parts = []
+                          if 'network' in p: query_parts.append(f'type={p[\"network\"]}')
+                          if p.get('tls'): query_parts.append('security=tls')
+                          if 'flow' in p: query_parts.append(f'flow={p[\"flow\"]}')
+                          if 'sni' in p: query_parts.append(f'sni={p[\"sni\"]}')
+                          if 'path' in p: query_parts.append(f'path={quote(p[\"path\"])}')
+                          query = '&'.join(query_parts)
                           uri = f'vless://{quote(p[\"uuid\"])}@{p[\"server\"]}:{p[\"port\"]}?{query}#{name}' if query else f'vless://{quote(p[\"uuid\"])}@{p[\"server\"]}:{p[\"port\"]}#{name}'
-                      else:  # trojan
-                          query = '&'.join([
-                              f'sni={p.get(\"sni\", \"\")}' if p.get('sni') else '',
-                              f'type={p.get(\"network\", \"tcp\")}' if p.get('network') else '',
-                              f'path={quote(p.get(\"path\", \"\"))}' if p.get('path') else ''
-                          ]).rstrip('&')
+                      elif p['type'] == 'trojan':
+                          query_parts = []
+                          if 'sni' in p: query_parts.append(f'sni={p[\"sni\"]}')
+                          if 'network' in p: query_parts.append(f'type={p[\"network\"]}')
+                          if 'path' in p: query_parts.append(f'path={quote(p[\"path\"])}')
+                          query = '&'.join(query_parts)
                           uri = f'trojan://{quote(p[\"password\"])}@{p[\"server\"]}:{p[\"port\"]}?{query}#{name}' if query else f'trojan://{quote(p[\"password\"])}@{p[\"server\"]}:{p[\"port\"]}#{name}'
                       f.write(uri + '\n')
           
           num = sum(1 for line in open('input_nodes.txt') if line.strip())
-          print(f'Generated {num} vless/Trojan URIs.')
+          print(f'Generated {num} URIs to input_nodes.txt')
           "
 
       - name: Convert to YAML
-        run: python node_converter.py
+        run: python node_converter.py input_nodes.txt nodes.yaml
 
       - name: Commit and push
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "actions@github.com"
           git add raw-sub.txt input_nodes.txt nodes.yaml || true
-          if git diff --staged --quiet; then
-            echo "No changes"
-          else
-            git commit -m "Auto update nodes $(date -u +'%Y-%m-%d')"
-            git push
-          fi
+          git commit -m "Auto update nodes $(date -u +'%Y-%m-%d')" || echo "no changes"
+          git push || echo "push failed"
