--- a/.github/workflows/sync-to-cnb.yml
+++ b/.github/workflows/sync-to-cnb.yml
@@ -20,8 +20,8 @@ jobs:
           CURRENT_BRANCH_NAME="${{ github.ref_name }}"
           echo "检查当前分支: $CURRENT_BRANCH_NAME 是否需要同步到 CNB..."
 
-          # 添加 CNB 远程仓库（公开仓库无需认证，私有仓库需 token）
-          git remote add cnb https://cnb.cool/xiyingruyi/Stash-rules.git
+          # 添加 CNB 远程仓库（不带凭证，避免暴露）
+          git remote add cnb https://cnb.cool/xiyingruyi/Stash-rules.git || git remote set-url cnb https://cnb.cool/xiyingruyi/Stash-rules.git
           git fetch cnb --no-tags
 
           # 检查当前分支是否领先于 CNB（避免循环）
@@ -33,15 +33,44 @@ jobs:
 
           echo "当前分支领先 $commits_ahead 个 commits，正在同步到 CNB..."
 
-          # 使用 git-sync 同步
-          docker run --rm \
-            -v ${{ github.workspace }}:${{ github.workspace }} \
-            -w ${{ github.workspace }} \
-            -e PLUGIN_TARGET_URL="https://cnb.cool/xiyingruyi/Stash-rules.git" \
-            -e PLUGIN_AUTH_TYPE="https" \
-            -e PLUGIN_USERNAME="xiyingruyi" \
-            -e PLUGIN_PASSWORD="${{ secrets.CNB }}" \
-            -e PLUGIN_BRANCH="$CURRENT_BRANCH_NAME" \
-            -e PLUGIN_FORCE="false" \
-            -e PLUGIN_PUSH_TAGS="false" \
-            tencentcom/git-sync
+          # 安全注入 CNB token（从 Secrets 加载，避免 URL 嵌入）
+          if [ -z "${{ secrets.CNB }}" ]; then
+            echo "错误: CNB token 未设置！请在 GitHub Secrets 中添加 CNB。"
+            exit 1
+          fi
+          git config --global url."https://xiyingruyi:${{ secrets.CNB }}@cnb.cool/".insteadOf "https://cnb.cool/"
+
+          # 新增：合并 CNB 远程变更（防 non-fast-forward 拒绝）
+          echo "合并远程变更以确保 fast-forward..."
+          if ! git merge-base --is-ancestor cnb/$CURRENT_BRANCH_NAME $CURRENT_BRANCH_NAME; then
+            git pull cnb $CURRENT_BRANCH_NAME --rebase
+            if [ $? -ne 0 ]; then
+              echo "合并失败：冲突需手动解决。"
+              exit 1
+            fi
+            echo "远程变更已 rebase 整合。"
+          else
+            echo "本地已是最新的，无需 pull。"
+          fi
+
+          # 重新检查领先 commits（合并后）
+          commits_ahead=$(git rev-list --count cnb/$CURRENT_BRANCH_NAME..$CURRENT_BRANCH_NAME 2>/dev/null || echo 0)
+          if [ $commits_ahead -eq 0 ]; then
+            echo "合并后无变更需要同步。"
+            exit 0
+          fi
+
+          # 执行推送（使用 --force-with-lease 安全 force，如果 rebase 后仍需）
+          git push cnb $CURRENT_BRANCH_NAME --force-with-lease
+
+          if [ $? -eq 0 ]; then
+            echo "同步到 CNB 成功！"
+          else
+            echo "同步失败！"
+            exit 1
+          fi
+
+          # 清理临时 Git 配置
+          git config --global --unset url."https://xiyingruyi:${{ secrets.CNB }}@cnb.cool/".insteadOf
+        env:
+          CNB_TOKEN: ${{ secrets.CNB }}  # 可选：额外环境变量，便于调试
