--- a/.github/workflows/sync-to-cnb.yml
+++ b/.github/workflows/sync-to-cnb.yml
@@ -27,7 +27,7 @@ jobs:
           git remote add cnb https://cnb.cool/xiyingruyi/Stash-rules.git || git remote set-url cnb https://cnb.cool/xiyingruyi/Stash-rules.git
           git fetch cnb --no-tags
 
-          # 获取时间戳（Unix 秒）
+          # 获取时间戳
           GITHUB_TIME=$(git log -1 --format=%ct $CURRENT_BRANCH_NAME)
           CNB_TIME=$(git log -1 --format=%ct cnb/$CURRENT_BRANCH_NAME 2>/dev/null || echo 0)
 
@@ -49,8 +49,14 @@ jobs:
           fi
           git config --global url."https://xiyingruyi:${{ secrets.CNB }}@cnb.cool/".insteadOf "https://cnb.cool/"
 
-          # 直接 push（无 rebase，简单）
-          git push cnb $CURRENT_BRANCH_NAME
+          # Fallback: 先 pull 整合（简单 merge，防 non-fast-forward）
+          echo "尝试 pull CNB 变更..."
+          if ! git pull cnb $CURRENT_BRANCH_NAME; then
+            echo "Pull 失败，使用 force-with-lease 覆盖（安全）..."
+          fi
+
+          # 推送
+          git push cnb $CURRENT_BRANCH_NAME --force-with-lease
 
           if [ $? -eq 0 ]; then
             echo "同步成功！"
