--- a/.github/workflows/sync-to-cnb.yml
+++ b/.github/workflows/sync-to-cnb.yml
@@ -3,7 +3,7 @@ name: Sync to CNB - All Branches
 on:
   push:
     branches:
-      - '**'  # 匹配所有分支（GitHub 支持 *）
+      - '**'  # 匹配所有分支
 
 jobs:
   sync:
@@ -16,66 +16,32 @@ jobs:
 
       - name: Sync to CNB Repository
         run: |
-          # 防循环：检查最后 commit 消息是否 CI 同步
-          LAST_COMMIT_MSG=$(git log -1 --pretty=%B)
-          if [[ "$LAST_COMMIT_MSG" == "auto-sync from CNB"* ]]; then
-            echo "跳过 CI 同步循环。"
-            exit 0
-          fi
-
           # 获取当前分支名称
           CURRENT_BRANCH_NAME="${{ github.ref_name }}"
           echo "检查当前分支: $CURRENT_BRANCH_NAME 是否需要同步到 CNB..."
 
-          # 设置 Git 用户身份
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-          # 添加 CNB 远程仓库（不带凭证）
-          git remote add cnb https://cnb.cool/xiyingruyi/Stash-rules.git || git remote set-url cnb https://cnb.cool/xiyingruyi/Stash-rules.git
+          # 添加 CNB 远程仓库（公开仓库无需认证，私有仓库需 token）
+          git remote add cnb https://cnb.cool/xiyingruyi/Stash-rules.git
           git fetch cnb --no-tags
 
-          # 优化比较：用 commit hash 比（谁的 HEAD 新谁推）
-          GITHUB_HEAD=$(git rev-parse $CURRENT_BRANCH_NAME)
-          CNB_HEAD=$(git rev-parse cnb/$CURRENT_BRANCH_NAME 2>/dev/null || echo "0000000000000000000000000000000000000000")
-          
-          echo "GitHub HEAD commit: $GITHUB_HEAD"
-          echo "CNB HEAD commit: $CNB_HEAD"
-
-          # 修正逻辑：如果 CNB 是 GitHub 祖先（GitHub 新或分歧），则推送 GitHub 到 CNB
-          if git merge-base --is-ancestor $CNB_HEAD $GITHUB_HEAD 2>/dev/null; then
-            echo "GitHub 新或分歧，推送变更到 CNB..."  # 修正消息
-          else
-            echo "CNB 是 GitHub 祖先，跳过（CNB 更新）。"  # 原 skip 条件，现在反转
+          # 检查当前分支是否领先于 CNB（避免循环）
+          commits_ahead=$(git rev-list --count cnb/$CURRENT_BRANCH_NAME..$CURRENT_BRANCH_NAME 2>/dev/null || echo 0)
+          if [ $commits_ahead -eq 0 ]; then
+            echo "无变更需要同步（仓库已一致或分支不存在）。"
             exit 0
           fi
 
-          # 安全注入 CNB token
-          if [ -z "${{ secrets.CNB }}" ]; then
-            echo "错误: CNB token 未设置！请在 GitHub Secrets 中添加 CNB。"
-            exit 1
-          fi
-          git config --global url."https://xiyingruyi:${{ secrets.CNB }}@cnb.cool/".insteadOf "https://cnb.cool/"
+          echo "当前分支领先 $commits_ahead 个 commits，正在同步到 CNB..."
 
-          # 整合 CNB 远程变更（pull merge 解决 non-fast-forward）
-          echo "尝试 pull CNB 变更..."
-          if git pull cnb $CURRENT_BRANCH_NAME; then
-            echo "Pull 成功，历史整合。"
-          else
-            echo "Pull 失败，使用 force-with-lease 覆盖。"
-          fi
-
-          # 执行推送（--force-with-lease 安全）
-          git push cnb $CURRENT_BRANCH_NAME --force-with-lease
-
-          if [ $? -eq 0 ]; then
-            echo "同步到 CNB 成功！ (auto-sync from GitHub)"
-          else
-            echo "同步失败！"
-            exit 1
-          fi
-
-          # 清理临时 Git 配置
-          git config --global --unset url."https://xiyingruyi:${{ secrets.CNB }}@cnb.cool/".insteadOf
-        env:
-          CNB_TOKEN: ${{ secrets.CNB }}  # 可选：额外环境变量，便于调试
+          # 使用 git-sync 同步
+          docker run --rm \
+            -v ${{ github.workspace }}:${{ github.workspace }} \
+            -w ${{ github.workspace }} \
+            -e PLUGIN_TARGET_URL="https://cnb.cool/xiyingruyi/Stash-rules.git" \
+            -e PLUGIN_AUTH_TYPE="https" \
+            -e PLUGIN_USERNAME="xiyingruyi" \
+            -e PLUGIN_PASSWORD="${{ secrets.CNB }}" \
+            -e PLUGIN_BRANCH="$CURRENT_BRANCH_NAME" \
+            -e PLUGIN_FORCE="false" \
+            -e PLUGIN_PUSH_TAGS="false" \
+            tencentcom/git-sync
