--- a/.github/workflows/update-proxies.yml
+++ b/.github/workflows/update-proxies.yml
@@ -2,7 +2,7 @@ name: Update Proxies
 
 on:
   schedule:
-    - cron: '0 0,12 * * *'  # 每天 UTC 00:00 和 12:00 运行
+    - cron: '0 0,6,12,18 * * *'  # 每天 UTC 00:00、06:00、12:00、18:00 运行（每 6 小时一次）
   workflow_dispatch:  # 支持手动触发
 
 jobs:
