更新 Direct_Rules.yaml

--- a/Direct_Rules.yaml
+++ b/Direct_Rules.yaml
@@ -4,8 +4,8 @@
 payload:
   # === 小黑盒 App 主体及 API ===
   - DOMAIN-SUFFIX,xiaoheihe.cn,DIRECT,no-resolve
-  - DOMAIN-SUFFIX,xiaoihe.com,DIRECT,no-resolve
-  - DOMAIN-SUFFIX,api.xiaoheihe.cn,DIRECT,no-resolve
+  - DOMAIN-SUFFIX,heyboxbj.max-c.com,DIRECT,no-resolve
+  - DOMAIN-SUFFIX,imgheybox.max-c.com,DIRECT,no-resolve
 
   # === 网站 ===
   - DOMAIN-SUFFIX,appstorrent.ru,DIRECT,no-resolve
