--- a/Direct_Rules.yaml
+++ b/Direct_Rules.yaml
@@ -6,7 +6,7 @@ payload:
   - DOMAIN-SUFFIX,xiaoheihe.cn,DIRECT,no-resolve
   - DOMAIN-SUFFIX,heyboxbj.max-c.com,DIRECT,no-resolve
   - DOMAIN-SUFFIX,imgheybox.max-c.com,DIRECT,no-resolve
-  - DOMAIN-SUFFIX,imgheybox.max1-c.com,DIRECT,no-resolve
+  - DOMAIN-SUFFIX,imgheybox1.max-c.com,DIRECT,no-resolve
   - DOMAIN-SUFFIX,imgmax.max-c.com,DIRECT,no-resolve
 
   # === 网站 ===
